--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_08_27_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_08_27_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">8/25/2020 11:51:53 PM</span>
+                    <span class="badge badge-primary">8/27/2020 2:48:42 PM</span>
                 </a>
             </li>
         </ul>
@@ -108,7 +108,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -116,25 +116,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">Creation, updation and deletion of  Leads</p> 
-													<p class="duration text-sm">0h:1m:37s+826ms</p> 
-													<span class="datetime">23:51:53 PM</span>
+													<p class="name">Creation, updation and deletion of Leads</p> 
+													<p class="duration text-sm">0h:2m:55s+881ms</p> 
+													<span class="datetime">14:48:42 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">Creation, updation and deletion of  Leads</h5>
-															<span class='badge badge-success'>8/25/2020 11:51:53 PM</span>
-															<span class='badge badge-danger'>8/25/2020 11:53:31 PM</span>
-															<span class='badge badge-default'>0h:1m:37s+826ms</span>
+															<h5 class="test-status text-pass">Creation, updation and deletion of Leads</h5>
+															<span class='badge badge-success'>8/27/2020 2:48:42 PM</span>
+															<span class='badge badge-danger'>8/27/2020 2:51:38 PM</span>
+															<span class='badge badge-default'>0h:2m:55s+881ms</span>
 														</div>
 																											</div>
 												</div>
@@ -143,21 +143,21 @@
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
 																		<div class="node">Create Lead without Pre-Existing Employer & Contact</div>
-																		<div class="status-avatar float-left fail-bg">
-																			<i class="fa fa-times text-white"></i>
+																		<div class="status-avatar float-left pass-bg">
+																			<i class="fa fa-check text-white"></i>
 																		</div>
 																	</h5>
 																</div>
 																	<div class="collapse">
 																		<div class="card-body">
 																				<div class="">
-																					<div class="node">Given: CSA user logs-in and navigates to Lead Page</div>
+																					<div class="node">Given: CSA user logs-in and navigates to 'Lead' Page</div>
 																					<div class="status-avatar float-left pass-bg">
 																						<i class="fa fa-check text-white"></i>
 																					</div>
 																																									</div>
 																				<div class="">
-																					<div class="node">When: User creates a New Lead without Pre-Existing Employer, Contact and saves</div>
+																					<div class="node">When: User creates a New Lead 'without' Pre-Existing Employer, Contact and saves</div>
 																					<div class="status-avatar float-left pass-bg">
 																						<i class="fa fa-check text-white"></i>
 																					</div>
@@ -170,11 +170,36 @@
 																																									</div>
 																				<div class="">
 																					<div class="node">Then: User should log-out of the Application</div>
-																					<div class="status-avatar float-left fail-bg">
-																						<i class="fa fa-times text-white"></i>
+																					<div class="status-avatar float-left pass-bg">
+																						<i class="fa fa-check text-white"></i>
 																					</div>
-																																											<div class="node-description">Object reference not set to an instance of an object.</div>
-																				</div>
+																																									</div>
+																		</div>
+																	</div>
+															</div>
+															<div class="card">
+																<div class="card-header" role="tab">
+																	<h5 class="card-title pl-3">
+																		<div class="node">Create Lead with Pre-Existing Employer & Contact</div>
+																		<div class="status-avatar float-left pass-bg">
+																			<i class="fa fa-check text-white"></i>
+																		</div>
+																	</h5>
+																</div>
+																	<div class="collapse">
+																		<div class="card-body">
+																				<div class="">
+																					<div class="node">Given: CSA user logs-in and navigates to 'Lead' Page</div>
+																					<div class="status-avatar float-left pass-bg">
+																						<i class="fa fa-check text-white"></i>
+																					</div>
+																																									</div>
+																				<div class="">
+																					<div class="node">When: User creates a New Lead 'with' Pre-Existing Employer, Contact and saves</div>
+																					<div class="status-avatar float-left pass-bg">
+																						<i class="fa fa-check text-white"></i>
+																					</div>
+																																									</div>
 																		</div>
 																	</div>
 															</div>
