Updated chrome driver version

--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_18_2020/Reports/dashboard.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_18_2020/Reports/dashboard.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/17/2020 4:21:09 PM</span>
+                    <span class="badge badge-primary">9/18/2020 2:27:27 AM</span>
                 </a>
             </li>
         </ul>
@@ -200,7 +200,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">9/17/2020 4:21:09 PM</h6>
+													<h6 class="font-weight-light">9/18/2020 2:27:27 AM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -216,7 +216,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">9/17/2020 4:21:11 PM</h6>
+													<h6 class="font-weight-light">9/18/2020 2:27:28 AM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -308,7 +308,7 @@
 			};
 		</script>
 			<script>
-				var timeline = { "Creation, updation and deletion of Employer Accounts":1.7098676 };
+				var timeline = { "Creation, updation and deletion of Employer Accounts":1.3497322 };
 			</script>
 		<script type='text/javascript'>
 	$('.brand-logo').text('').append('<img src=D:\Users\jloyzaga\Documents\FrameworkForJoe\FrameworkForJoe\Capgemini_logo_high_res-smaller-2.jpg>')
