--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_22_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_22_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/18/2020 2:47:51 AM</span>
+                    <span class="badge badge-primary">9/22/2020 11:05:09 AM</span>
                 </a>
             </li>
         </ul>
@@ -122,19 +122,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">Creation, updation and deletion of Job Orders</p> 
-													<p class="duration text-sm">0h:0m:1s+486ms</p> 
-													<span class="datetime">02:47:51 AM</span>
+													<p class="name">Creation, updation and deletion of Employer Accounts</p> 
+													<p class="duration text-sm">0h:1m:41s+925ms</p> 
+													<span class="datetime">11:05:09 AM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">Creation, updation and deletion of Job Orders</h5>
-															<span class='badge badge-success'>9/18/2020 2:47:51 AM</span>
-															<span class='badge badge-danger'>9/18/2020 2:47:52 AM</span>
-															<span class='badge badge-default'>0h:0m:1s+486ms</span>
+															<h5 class="test-status text-fail">Creation, updation and deletion of Employer Accounts</h5>
+															<span class='badge badge-success'>9/22/2020 11:05:09 AM</span>
+															<span class='badge badge-danger'>9/22/2020 11:06:51 AM</span>
+															<span class='badge badge-default'>0h:1m:41s+925ms</span>
 														</div>
 																											</div>
 												</div>
@@ -142,7 +142,7 @@
 															<div class="card">
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
-																		<div class="node">Create Job Order on CAD Account</div>
+																		<div class="node">Create Employer CAD Account</div>
 																		<div class="status-avatar float-left fail-bg">
 																			<i class="fa fa-times text-white"></i>
 																		</div>
@@ -155,7 +155,7 @@
 																					<div class="status-avatar float-left fail-bg">
 																						<i class="fa fa-times text-white"></i>
 																					</div>
-																																											<div class="node-description">session not created: This version of ChromeDriver only supports Chrome version 85 (SessionNotCreated)</div>
+																																											<div class="node-description">Login page failed.</div>
 																				</div>
 																		</div>
 																	</div>
