Multiple Users | Automation Maintenance Updates

--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_29_2020/Reports/dashboard.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_29_2020/Reports/dashboard.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/22/2020 12:46:51 PM</span>
+                    <span class="badge badge-primary">9/29/2020 8:37:50 AM</span>
                 </a>
             </li>
         </ul>
@@ -145,9 +145,9 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='0%'><b>0</b> steps passed</small></div>
+	                                    	<div><small data-tooltip='50%'><b>1</b> steps passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='100%'><b>1</b> steps failed, 
+	                                    		<small data-tooltip='50%'><b>1</b> steps failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -200,7 +200,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">9/22/2020 12:46:51 PM</h6>
+													<h6 class="font-weight-light">9/29/2020 8:37:50 AM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -216,7 +216,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">9/22/2020 12:48:31 PM</h6>
+													<h6 class="font-weight-light">9/29/2020 8:38:39 AM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -295,8 +295,8 @@
 				infoChild: 0,
 				debugChild: 0,
 				exceptionsChild: 1,
-				grandChildCount: 1,
-				passGrandChild: 0,
+				grandChildCount: 2,
+				passGrandChild: 1,
 				failGrandChild: 1,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
@@ -308,7 +308,7 @@
 			};
 		</script>
 			<script>
-				var timeline = { "Creation, updation and deletion of Employer Accounts":100.1004116 };
+				var timeline = { "Creation, updation and deletion of Employer Accounts":45.028204 };
 			</script>
 		<script type='text/javascript'>
 	$('.brand-logo').text('').append('<img src=D:\Users\jloyzaga\Documents\FrameworkForJoe\FrameworkForJoe\Capgemini_logo_high_res-smaller-2.jpg>')
