--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_23_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_23_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/22/2020 12:46:51 PM</span>
+                    <span class="badge badge-primary">9/23/2020 2:30:35 PM</span>
                 </a>
             </li>
         </ul>
@@ -108,7 +108,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -123,8 +123,8 @@
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">Creation, updation and deletion of Employer Accounts</p> 
-													<p class="duration text-sm">0h:1m:40s+100ms</p> 
-													<span class="datetime">12:46:51 PM</span>
+													<p class="duration text-sm">0h:1m:17s+686ms</p> 
+													<span class="datetime">14:30:35 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
@@ -132,9 +132,9 @@
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
 															<h5 class="test-status text-fail">Creation, updation and deletion of Employer Accounts</h5>
-															<span class='badge badge-success'>9/22/2020 12:46:51 PM</span>
-															<span class='badge badge-danger'>9/22/2020 12:48:31 PM</span>
-															<span class='badge badge-default'>0h:1m:40s+100ms</span>
+															<span class='badge badge-success'>9/23/2020 2:30:35 PM</span>
+															<span class='badge badge-danger'>9/23/2020 2:31:53 PM</span>
+															<span class='badge badge-default'>0h:1m:17s+686ms</span>
 														</div>
 																											</div>
 												</div>
@@ -142,7 +142,7 @@
 															<div class="card">
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
-																		<div class="node">Create Employer PBI Account</div>
+																		<div class="node">Create Employer CAD Account with multiple Users</div>
 																		<div class="status-avatar float-left fail-bg">
 																			<i class="fa fa-times text-white"></i>
 																		</div>
@@ -151,11 +151,17 @@
 																	<div class="collapse">
 																		<div class="card-body">
 																				<div class="">
-																					<div class="node">Given: CSA user logs-in and navigates to 'Employer' Page</div>
+																					<div class="node">Given: User logs-in with CRMTest_ART@ultimatemedical.edu and eyed--5T&tZ and navigates to 'Employer' Page</div>
+																					<div class="status-avatar float-left pass-bg">
+																						<i class="fa fa-check text-white"></i>
+																					</div>
+																																									</div>
+																				<div class="">
+																					<div class="node">When: User creates a New Employer 'CAD' Account and saves</div>
 																					<div class="status-avatar float-left fail-bg">
 																						<i class="fa fa-times text-white"></i>
 																					</div>
-																																											<div class="node-description">Login page failed.</div>
+																																											<div class="node-description">Unable to Wait Until 00:00:02</div>
 																				</div>
 																		</div>
 																	</div>
