--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_28_2020/Reports/dashboard.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_28_2020/Reports/dashboard.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/22/2020 12:46:51 PM</span>
+                    <span class="badge badge-primary">9/28/2020 8:30:04 AM</span>
                 </a>
             </li>
         </ul>
@@ -127,7 +127,7 @@
 	                                    <div class="card-footer">
 	                                    	<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='100%'><b>1</b> scenarios failed, 
+	                                    		<small data-tooltip='100%'><b>2</b> scenarios failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -147,7 +147,7 @@
 	                                    <div class="card-footer">
 	                                    	<div><small data-tooltip='0%'><b>0</b> steps passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='100%'><b>1</b> steps failed, 
+	                                    		<small data-tooltip='100%'><b>2</b> steps failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -181,7 +181,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Scenarios</p>
-													<h2 class="font-size-28 font-weight-light">1</h2>
+													<h2 class="font-size-28 font-weight-light">2</h2>
 													<span class="text-semibold text-success font-size-15">
 													<i class="ti-arrow-up font-size-11"></i> 
 														<span>0%</span>
@@ -200,7 +200,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">9/22/2020 12:46:51 PM</h6>
+													<h6 class="font-weight-light">9/28/2020 8:30:04 AM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -216,7 +216,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">9/22/2020 12:48:31 PM</h6>
+													<h6 class="font-weight-light">9/28/2020 8:31:52 AM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -285,30 +285,30 @@
 				warningParent: 0,
 				skipParent: 0,
 				exceptionsParent: 1,
-				childCount: 1,
+				childCount: 2,
 				passChild: 0,
-				failChild: 1,
+				failChild: 2,
 				fatalChild: 0,
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
 				infoChild: 0,
 				debugChild: 0,
-				exceptionsChild: 1,
-				grandChildCount: 1,
+				exceptionsChild: 2,
+				grandChildCount: 2,
 				passGrandChild: 0,
-				failGrandChild: 1,
+				failGrandChild: 2,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
 				warningGrandChild: 0,
 				skipGrandChild: 0,
 				infoGrandChild: 0,
 				debugGrandChild: 0,
-				exceptionsGrandChild: 1,
+				exceptionsGrandChild: 2,
 			};
 		</script>
 			<script>
-				var timeline = { "Creation, updation and deletion of Employer Accounts":100.1004116 };
+				var timeline = { "Creation, updation and deletion of Job Orders":107.4225941 };
 			</script>
 		<script type='text/javascript'>
 	$('.brand-logo').text('').append('<img src=D:\Users\jloyzaga\Documents\FrameworkForJoe\FrameworkForJoe\Capgemini_logo_high_res-smaller-2.jpg>')
