--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_28_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_28_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/22/2020 12:46:51 PM</span>
+                    <span class="badge badge-primary">9/28/2020 8:30:04 AM</span>
                 </a>
             </li>
         </ul>
@@ -122,19 +122,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">Creation, updation and deletion of Employer Accounts</p> 
-													<p class="duration text-sm">0h:1m:40s+100ms</p> 
-													<span class="datetime">12:46:51 PM</span>
+													<p class="name">Creation, updation and deletion of Job Orders</p> 
+													<p class="duration text-sm">0h:1m:47s+422ms</p> 
+													<span class="datetime">08:30:04 AM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">Creation, updation and deletion of Employer Accounts</h5>
-															<span class='badge badge-success'>9/22/2020 12:46:51 PM</span>
-															<span class='badge badge-danger'>9/22/2020 12:48:31 PM</span>
-															<span class='badge badge-default'>0h:1m:40s+100ms</span>
+															<h5 class="test-status text-fail">Creation, updation and deletion of Job Orders</h5>
+															<span class='badge badge-success'>9/28/2020 8:30:04 AM</span>
+															<span class='badge badge-danger'>9/28/2020 8:31:52 AM</span>
+															<span class='badge badge-default'>0h:1m:47s+422ms</span>
 														</div>
 																											</div>
 												</div>
@@ -142,7 +142,7 @@
 															<div class="card">
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
-																		<div class="node">Create Employer PBI Account</div>
+																		<div class="node">Create Job Order on CAD Account</div>
 																		<div class="status-avatar float-left fail-bg">
 																			<i class="fa fa-times text-white"></i>
 																		</div>
@@ -156,6 +156,29 @@
 																						<i class="fa fa-times text-white"></i>
 																					</div>
 																																											<div class="node-description">Login page failed.</div>
+																				</div>
+																		</div>
+																	</div>
+															</div>
+															<div class="card">
+																<div class="card-header" role="tab">
+																	<h5 class="card-title pl-3">
+																		<div class="node">Create Job Order on PBI Account</div>
+																		<div class="status-avatar float-left fail-bg">
+																			<i class="fa fa-times text-white"></i>
+																		</div>
+																	</h5>
+																</div>
+																	<div class="collapse">
+																		<div class="card-body">
+																				<div class="">
+																					<div class="node">Given: CSA user logs-in and navigates to 'Employer' Page</div>
+																					<div class="status-avatar float-left fail-bg">
+																						<i class="fa fa-times text-white"></i>
+																					</div>
+																																											<div class="node-description">unknown error: cannot determine loading status
+from disconnected: received Inspector.detached event
+  (Session info: chrome=85.0.4183.121)</div>
 																				</div>
 																		</div>
 																	</div>
