--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_29_2020/Reports/dashboard.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_29_2020/Reports/dashboard.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/29/2020 8:37:50 AM</span>
+                    <span class="badge badge-primary">9/29/2020 12:49:11 PM</span>
                 </a>
             </li>
         </ul>
@@ -103,11 +103,11 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='0%'>
-	                                    		<b>0</b> features passed
+	                                    	<div><small data-tooltip='100%'>
+	                                    		<b>1</b> features passed
                                     		</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='100%'><b>1</b> features failed, 
+	                                    		<small data-tooltip='0%'><b>0</b> features failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -125,9 +125,9 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
+	                                    	<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='100%'><b>1</b> scenarios failed, 
+	                                    		<small data-tooltip='0%'><b>0</b> scenarios failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -145,9 +145,9 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='50%'><b>1</b> steps passed</small></div>
+	                                    	<div><small data-tooltip='100%'><b>1</b> steps passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='50%'><b>1</b> steps failed, 
+	                                    		<small data-tooltip='0%'><b>0</b> steps failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -165,7 +165,7 @@
 													<h2 class="font-size-28 font-weight-light">1</h2>
 													<span class="text-semibold text-success font-size-15">
 													<i class="ti-arrow-up font-size-11"></i> 
-														<span>0%</span>
+														<span>100%</span>
 													</span>
 												</div>
 												<div class="align-self-end">
@@ -184,7 +184,7 @@
 													<h2 class="font-size-28 font-weight-light">1</h2>
 													<span class="text-semibold text-success font-size-15">
 													<i class="ti-arrow-up font-size-11"></i> 
-														<span>0%</span>
+														<span>100%</span>
 													</span>
 												</div>
 												<div class="align-self-end">
@@ -200,7 +200,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">9/29/2020 8:37:50 AM</h6>
+													<h6 class="font-weight-light">9/29/2020 12:49:11 PM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -216,7 +216,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">9/29/2020 8:38:39 AM</h6>
+													<h6 class="font-weight-light">9/29/2020 12:49:25 PM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -278,37 +278,37 @@
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 0,
-				failParent: 1,
+				passParent: 1,
+				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 0,
 				childCount: 1,
-				passChild: 0,
-				failChild: 1,
+				passChild: 1,
+				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
 				infoChild: 0,
 				debugChild: 0,
-				exceptionsChild: 1,
-				grandChildCount: 2,
+				exceptionsChild: 0,
+				grandChildCount: 1,
 				passGrandChild: 1,
-				failGrandChild: 1,
+				failGrandChild: 0,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
 				warningGrandChild: 0,
 				skipGrandChild: 0,
 				infoGrandChild: 0,
 				debugGrandChild: 0,
-				exceptionsGrandChild: 1,
+				exceptionsGrandChild: 0,
 			};
 		</script>
 			<script>
-				var timeline = { "Creation, updation and deletion of Employer Accounts":45.028204 };
+				var timeline = { "Creation, updation and deletion of Employer Accounts":13.5217496 };
 			</script>
 		<script type='text/javascript'>
 	$('.brand-logo').text('').append('<img src=D:\Users\jloyzaga\Documents\FrameworkForJoe\FrameworkForJoe\Capgemini_logo_high_res-smaller-2.jpg>')
