--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_29_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_29_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/29/2020 1:11:26 PM</span>
+                    <span class="badge badge-primary">9/29/2020 2:52:37 PM</span>
                 </a>
             </li>
         </ul>
@@ -108,7 +108,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
+											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -116,25 +116,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="pass" author="" device="" tag=""> 
-											<div class="status-avatar pass-bg">
-												<i class="fa fa-check text-white"></i>
+										<li class="test-item" status="fail" author="" device="" tag=""> 
+											<div class="status-avatar fail-bg">
+												<i class="fa fa-times text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">Creation, updation and deletion of Employer Accounts</p> 
-													<p class="duration text-sm">0h:0m:14s+803ms</p> 
-													<span class="datetime">13:11:27 PM</span>
+													<p class="duration text-sm">0h:4m:5s+138ms</p> 
+													<span class="datetime">14:52:37 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">Creation, updation and deletion of Employer Accounts</h5>
-															<span class='badge badge-success'>9/29/2020 1:11:27 PM</span>
-															<span class='badge badge-danger'>9/29/2020 1:11:41 PM</span>
-															<span class='badge badge-default'>0h:0m:14s+803ms</span>
+															<h5 class="test-status text-fail">Creation, updation and deletion of Employer Accounts</h5>
+															<span class='badge badge-success'>9/29/2020 2:52:37 PM</span>
+															<span class='badge badge-danger'>9/29/2020 2:56:42 PM</span>
+															<span class='badge badge-default'>0h:4m:5s+138ms</span>
 														</div>
 																											</div>
 												</div>
@@ -142,20 +142,21 @@
 															<div class="card">
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
-																		<div class="node">Sample Scenario</div>
-																		<div class="status-avatar float-left pass-bg">
-																			<i class="fa fa-check text-white"></i>
+																		<div class="node">Create Employer CAD Account</div>
+																		<div class="status-avatar float-left fail-bg">
+																			<i class="fa fa-times text-white"></i>
 																		</div>
 																	</h5>
 																</div>
 																	<div class="collapse">
 																		<div class="card-body">
 																				<div class="">
-																					<div class="node">Given: Sample Step</div>
-																					<div class="status-avatar float-left pass-bg">
-																						<i class="fa fa-check text-white"></i>
+																					<div class="node">Given: CSA user logs-in and navigates to 'Employer' Page</div>
+																					<div class="status-avatar float-left fail-bg">
+																						<i class="fa fa-times text-white"></i>
 																					</div>
-																																									</div>
+																																											<div class="node-description">Exception has been thrown by the target of an invocation.</div>
+																				</div>
 																		</div>
 																	</div>
 															</div>
