--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_10_04_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_10_04_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">10/2/2020 2:05:13 PM</span>
+                    <span class="badge badge-primary">10/4/2020 8:27:56 PM</span>
                 </a>
             </li>
         </ul>
@@ -108,7 +108,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -116,25 +116,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">Power Apps Runs</p> 
-													<p class="duration text-sm">0h:0m:47s+308ms</p> 
-													<span class="datetime">14:05:13 PM</span>
+													<p class="duration text-sm">0h:58m:0s+409ms</p> 
+													<span class="datetime">20:27:56 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">Power Apps Runs</h5>
-															<span class='badge badge-success'>10/2/2020 2:05:13 PM</span>
-															<span class='badge badge-danger'>10/2/2020 2:06:01 PM</span>
-															<span class='badge badge-default'>0h:0m:47s+308ms</span>
+															<h5 class="test-status text-pass">Power Apps Runs</h5>
+															<span class='badge badge-success'>10/4/2020 8:27:56 PM</span>
+															<span class='badge badge-danger'>10/4/2020 9:25:56 PM</span>
+															<span class='badge badge-default'>0h:58m:0s+409ms</span>
 														</div>
 																											</div>
 												</div>
@@ -143,8 +143,8 @@
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
 																		<div class="node">Run UMA Power Automate Flows</div>
-																		<div class="status-avatar float-left fail-bg">
-																			<i class="fa fa-times text-white"></i>
+																		<div class="status-avatar float-left pass-bg">
+																			<i class="fa fa-check text-white"></i>
 																		</div>
 																	</h5>
 																</div>
@@ -158,12 +158,10 @@
 																																									</div>
 																				<div class="">
 																					<div class="node">Then: loop through all the Flows and run them</div>
-																					<div class="status-avatar float-left fail-bg">
-																						<i class="fa fa-times text-white"></i>
+																					<div class="status-avatar float-left pass-bg">
+																						<i class="fa fa-check text-white"></i>
 																					</div>
-																																											<div class="node-description">stale element reference: element is not attached to the page document
-  (Session info: chrome=85.0.4183.121)</div>
-																				</div>
+																																									</div>
 																		</div>
 																	</div>
 															</div>
